variables.Variables.scala.code
var dejafait=0
var nbpas =0
while (!estsurBiscuit()){
  avance();
  nbpas=nbpas+1;
}
prendBiscuit();
while(dejafait!=nbpas){
  recule()
  dejafait=dejafait+1
}